# dp4mdt

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
benchmarks/: SomervilleHappinessSurvey2015_clean.data  SomervilleHappinessSurvey2015_tr.data  SomervilleHappinessSurvey2015_trte.data  lymphography_tr.data  results.txt  tic-tac-toe_tr.data
include/: confusion.hpp  lazycsv.hpp
py_tool/: metrics.py
src/: dtree.cpp  dtree.h  main.cpp  mdt_dp.cpp  mdt_dp.h  mts_ilp.cpp  mts_ilp.h  mts_types.h  read_data.cpp  read_data.h
